fix overflowing submenu

--- a/webui/style.css
+++ b/webui/style.css
@@ -596,6 +596,12 @@ hr {
     box-sizing: border-box;
 
     overflow-y: auto;
+    overflow-x: hidden;
+}
+.content-submenu-column {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .content-submenu-box {
     position: relative;
@@ -614,10 +620,8 @@ hr {
 .content-submenu-box + .content-submenu-box-bot {
     border-top: 1px solid var(--medium);
     padding-top: 20px;
-    position: absolute;
-    width: 199px;
-    bottom: 0;
-    margin-bottom: 20px;
+    position: relative;
+    margin-top: auto;
 }
 .content-submenu-box + .content-submenu-box-bot > * {
     max-width: 199px;
